Bug 44809 - [4.6 Regression] Mozilla build fails in gimplification.
Summary: [4.6 Regression] Mozilla build fails in gimplification.
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-04 13:20 UTC by Jan Hubicka
Modified: 2010-07-04 16:55 UTC (History)
1 user (show)

See Also:
Host: x86_64-linux
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-07-04 14:42:41


Attachments
testcase (61.49 KB, text/plain)
2010-07-04 13:21 UTC, Jan Hubicka
Details
patch (581 bytes, patch)
2010-07-04 15:24 UTC, Richard Biener
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Hubicka 2010-07-04 13:20:06 UTC
/abuild/jh/trunk-install/bin/g++ -O2 qq.ii
In file included from ../../../netwerk/cache/nsDiskCacheMap.cpp:44:0:
../../../netwerk/cache/nsDiskCacheMap.h: In member function ‘void nsDiskCacheHeader::Swap()’:
../../../netwerk/cache/nsDiskCacheMap.h:362:28: internal compiler error: in gimplify_expr, at gimplify.c:7463
Comment 1 Jan Hubicka 2010-07-04 13:21:23 UTC
Created attachment 21081 [details]
testcase
Comment 2 Richard Biener 2010-07-04 14:42:41 UTC
Mine (mem-ref related).  Reducing.
Comment 3 Richard Biener 2010-07-04 15:14:11 UTC
Reduced testcase:

unsigned int mEvictionRank[(1 << 5)];
void Unswap(int i)
{ 
  mEvictionRank[i] = ({ unsigned int __v = i; __v; });
}
Comment 4 Richard Biener 2010-07-04 15:24:00 UTC
Created attachment 21083 [details]
patch

Patch I'm testing.
Comment 5 Richard Biener 2010-07-04 16:55:55 UTC
Subject: Bug 44809

Author: rguenth
Date: Sun Jul  4 16:55:40 2010
New Revision: 161803

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=161803
Log:
2010-07-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44809
	* gimplify.c (gimplify_expr): Properly build a MEM_REF instead
	of an INDIRECT_REF.

	* g++.dg/torture/pr44809.C: New testcase.

Added:
    trunk/gcc/testsuite/g++.dg/torture/pr44809.C
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gimplify.c
    trunk/gcc/testsuite/ChangeLog

Comment 6 Richard Biener 2010-07-04 16:55:55 UTC
Fixed.